Remove gradle project, implement dockerfile for go